kener/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kener
  labels:
    app: kener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kener
  template:
    metadata:
      labels:
        app: kener
    spec:
      containers:
        - name: kener
          image: docker.io/rajnandan1/kener:3.2.19
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: kener-uploads
