kener/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: kener
spec:
  selector:
    app: kener
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
